fix: too much padding in footer

--- a/src/app/components/Footer/Footer.styles.module.css
+++ b/src/app/components/Footer/Footer.styles.module.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--spacing-2xl);
-    padding: 10% 10%;
+    padding: 5% 10%;
 }
 
 .StyledFooterHeadline {
